# backend/mon-projet-api/storage/api-docs/api-docs.json
@@ -58,6 +58,131 @@
                 }
             }
         },
+        "/api/entreprises": {
+            "get": {
+                "tags": [
+                    "Entreprises"
+                ],
+                "summary": "Liste toutes les entreprises",
+                "operationId": "7f9edf2d966d33903c18bd90ee7a0dfd",
+                "responses": {
+                    "200": {
+                        "description": "Liste des entreprises"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Entreprises"
+                ],
+                "summary": "Créer une nouvelle entreprise",
+                "operationId": "883d1fed0716732a97e0d428ec084d0c",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "nom"
+                                ],
+                                "properties": {
+                                    "nom": {
+                                        "type": "string",
+                                        "example": "BTP Madagascar"
+                                    },
+                                    "contact": {
+                                        "type": "string",
+                                        "example": "Jean Rakoto"
+                                    },
+                                    "telephone": {
+                                        "type": "string",
+                                        "example": "+261 34 12 345 67"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "contact@entreprise.mg"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Entreprise créée"
+                    }
+                }
+            }
+        },
+        "/api/entreprises/{id}": {
+            "get": {
+                "tags": [
+                    "Entreprises"
+                ],
+                "summary": "Détails d'une entreprise",
+                "operationId": "fa454084a3a74ba55fe3634872a81a17",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Détails de l'entreprise"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Entreprises"
+                ],
+                "summary": "Mettre à jour une entreprise",
+                "operationId": "db09dd91c137fe5832ebfdc3ca6fe5f6",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Entreprise mise à jour"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Entreprises"
+                ],
+                "summary": "Supprimer une entreprise",
+                "operationId": "fc502310c692349bea4b024f2f81207e",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Entreprise supprimée"
+                    }
+                }
+            }
+        },
         "/api/login": {
             "post": {
                 "tags": [
@@ -122,6 +247,143 @@
                 "responses": {
                     "200": {
                         "description": "Blocage réinitialisé"
+                    }
+                }
+            }
+        },
+        "/api/problemes": {
+            "get": {
+                "tags": [
+                    "Problemes Routiers"
+                ],
+                "summary": "Liste tous les problèmes routiers",
+                "operationId": "fcd8ea5bd7565117e845ba8e2320d725",
+                "responses": {
+                    "200": {
+                        "description": "Liste des problèmes"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Problemes Routiers"
+                ],
+                "summary": "Créer un nouveau problème routier",
+                "operationId": "d2449a8566da589ebc7411737c1354a2",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "latitude",
+                                    "longitude"
+                                ],
+                                "properties": {
+                                    "latitude": {
+                                        "type": "number",
+                                        "example": -18.8792
+                                    },
+                                    "longitude": {
+                                        "type": "number",
+                                        "example": 47.5079
+                                    },
+                                    "status": {
+                                        "type": "string",
+                                        "example": "NOUVEAU"
+                                    },
+                                    "surface_m2": {
+                                        "type": "number",
+                                        "example": 25.5
+                                    },
+                                    "budget": {
+                                        "type": "number",
+                                        "example": 5000000
+                                    },
+                                    "id_entreprise": {
+                                        "type": "integer",
+                                        "example": 1
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Problème créé"
+                    }
+                }
+            }
+        },
+        "/api/problemes/{id}": {
+            "get": {
+                "tags": [
+                    "Problemes Routiers"
+                ],
+                "summary": "Détails d'un problème",
+                "operationId": "22219c652821833429ad5235e073a4fd",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Détails du problème"
+                    },
+                    "404": {
+                        "description": "Problème non trouvé"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Problemes Routiers"
+                ],
+                "summary": "Mettre à jour un problème",
+                "operationId": "bf093bebcf975c700979ef6a69c8e7f0",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Problème mis à jour"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Problemes Routiers"
+                ],
+                "summary": "Supprimer un problème",
+                "operationId": "24c1536cec76750cac68c3777a0e23a3",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Problème supprimé"
                     }
                 }
             }
@@ -260,6 +522,129 @@
                 "responses": {
                     "200": {
                         "description": "Rôle supprimé"
+                    }
+                }
+            }
+        },
+        "/api/signalements": {
+            "get": {
+                "tags": [
+                    "Signalements"
+                ],
+                "summary": "Liste tous les signalements",
+                "operationId": "bc5f732d0a6199b18d23b59a8b220d23",
+                "responses": {
+                    "200": {
+                        "description": "Liste des signalements"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Signalements"
+                ],
+                "summary": "Créer un nouveau signalement",
+                "operationId": "1cef0a98122b3b522b3acde3044deee4",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "id_probleme"
+                                ],
+                                "properties": {
+                                    "id_probleme": {
+                                        "type": "string",
+                                        "example": "uuid-here"
+                                    },
+                                    "user_id": {
+                                        "type": "string",
+                                        "example": "uuid-here"
+                                    },
+                                    "commentaire": {
+                                        "type": "string",
+                                        "example": "Route en très mauvais état"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Signalement créé"
+                    }
+                }
+            }
+        },
+        "/api/signalements/{id}": {
+            "get": {
+                "tags": [
+                    "Signalements"
+                ],
+                "summary": "Détails d'un signalement",
+                "operationId": "3377083d5e9916548675e39a1fae4652",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Détails du signalement"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Signalements"
+                ],
+                "summary": "Supprimer un signalement",
+                "operationId": "fc993b1972ef126f5d52648b5cc781fd",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Signalement supprimé"
+                    }
+                }
+            }
+        },
+        "/api/problemes/{problemeId}/signalements": {
+            "get": {
+                "tags": [
+                    "Signalements"
+                ],
+                "summary": "Signalements d'un problème spécifique",
+                "operationId": "e382e5a4555532ed543962ba58ba8752",
+                "parameters": [
+                    {
+                        "name": "problemeId",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Liste des signalements"
                     }
                 }
             }
@@ -449,12 +834,24 @@
             "description": "Gestion de l'inscription et du login"
         },
         {
+            "name": "Entreprises",
+            "description": "Gestion des entreprises"
+        },
+        {
             "name": "LoginAttempts",
             "description": "Gestion des tentatives de connexion et blocage"
         },
         {
+            "name": "Problemes Routiers",
+            "description": "Gestion des problèmes routiers"
+        },
+        {
             "name": "Roles",
             "description": "API CRUD pour les rôles"
+        },
+        {
+            "name": "Signalements",
+            "description": "Gestion des signalements"
         },
         {
             "name": "Tests",
